--- a/index.html
+++ b/index.html
@@ -3,47 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal?> Portfolio</title>
+    <title>My Personal Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-
-   
-<!-- 
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" 
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-    <!--box icons-->
-<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <!----header section start---->
+    <!-- Header section -->
     <header class="header">
-   <div class="logos">
-                <img src="./images/01.jpg" alt="Personal Image" />
-            </div>
-    <div class="bx bx-menu" id="menu-icon"></div>
-            <nav class="navbar">
-                <a href="#" class="active">Home</a>
-                <a href="#">About Me</a>
-                <a href="#">Education</a>
-                <a href="#">Services</a>
-                <a href="#">Projects</a>
-                <a href="#">Skills</a>
-                <a href="#">Contact</a>
-
-            </nav>
+        <div class="logos">
+            <img src="./images/01.jpg" alt="Personal Image" />
+        </div>
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">
+            <i class="bx bx-menu"></i>
+        </label>
+        <nav class="navbar">
+            <a href="#" class="active">Home</a>
+            <a href="#about">About Me</a>
+            <a href="#education">Education</a>
+            <a href="#skills">Skills</a>
+            <a href="#services">Services</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
    <!--home section design-->
    <section class="home" id="home">
-    <div class="home-container ">
+   <div class="responsive">
+     <div>
+        <div class="home-container ">
          <div class="home-content">
         <h1>Hi, I'm <span>John Ochieng</span></h1>
         <div class="text-animate">
-            <h3>Frontend Developer</h3>
+            <h3><span>a</span> Frontend Developer</h3>
         </div>
         <p>I'm a front-end developer specializing in building beautiful and responsive websites. I love working with HTML and CSS to bring ideas to life.</p>
         <div class="btn-box">
             <a href="#" class="btn">Hire Me</a>
-            <a href="#" class="btn">Download CV</a>
+            <a href="file:///C:/Users/Administrator/Downloads/Resume.pdf" class="btn">Download CV</a>
         </div>
     </div>
     <div class="home-social">
@@ -53,10 +53,12 @@
      <a href="#"><i class='bx bxl-github'></i></a>
     </div>
     </div>
+    </div>
      <!--image-->
     <div class="home-image">
                 <img src="./images/img.jpg" alt="Personal Image" class="my-img" />
             </div>
+   </div>
    </section>
    <!--about section design-->
    <section class="about" id="about">
@@ -198,6 +200,60 @@ When I'm not coding, I love diving into new projects, experimenting with new lib
     </div>
     </div>
    </section>
+    <!--services section design-->
+<section class="services" id="services">
+    <h2 class="heading">My <span>Services</span></h2>
+    <div class="services-row">
+        <div class="service-box">
+            <i class='bx bx-code-alt'></i>
+            <h3>Web Development</h3>
+            <p>I build responsive, user-friendly websites and web applications using modern tools and frameworks like React, HTML, CSS, and JavaScript.</p>
+        </div>
+        <div class="service-box">
+            <i class='bx bxs-paint'></i>
+            <h3>UI/UX Design</h3>
+            <p>Creating aesthetically pleasing and intuitive user interfaces to enhance user experience, focusing on simplicity and effectiveness.</p>
+        </div>
+        <div class="service-box">
+            <i class='bx bxl-wordpress'></i>
+            <h3>WordPress Development</h3>
+            <p>Offering custom WordPress development services, from building blogs to e-commerce websites, with fully customizable themes and plugins.</p>
+        </div>
+    </div>
+</section>
+
+<!--projects section design-->
+<section class="projects" id="projects">
+    <h2 class="heading"> My <span>Projects</span></h2>
+    <div class="projects-row">
+        <div class="project-box">
+            <img src="images./S1.png" alt="Nike Shoe Store" class="project-box-img">
+            <h3>Nike Shoe Store</h3>
+            <p>Developed a responsive e-commerce platform for Nike shoes, incorporating React, Redux, and Tailwind CSS to provide a seamless user experience.</p>
+            <div class="btn-box btns">
+            <a href="https://nike-store-web.vercel.app/" class="btn">View Project</a>
+            </div>
+        </div>
+        <div class="project-box">
+            <img src="images/S2.png" alt="Domestic Web App" class="project-box-img">
+            <h3>Domestic Web App</h3>
+            <p>Created a web app to help users manage and track daily expenses and income, using React and Context API for state management.</p>
+            <div class="btn-box btns">
+            <a href="https://photogram-e48d5.web.app/" class="btn">View Project</a>
+            </div>
+        </div>
+        <div class="project-box">
+            <img src="images/S3.png" alt="Personal Portfolio" class="project-box-img">
+            <h3>Personal Portfolio</h3>
+            <p>A portfolio website built with HTML, CSS, and JavaScript, showcasing my work, skills, and contact information in a sleek and responsive layout.</p>
+        
+             <div class="btn-box btns">
+                    <a href="https://my-portfolio-three-sigma-60.vercel.app/" class="btn">View Project</a>
+             </div>
+        </div>
+    </div>
+</section>
+
    <!--contact section design-->
    <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span></h2>
@@ -234,52 +290,7 @@ When I'm not coding, I love diving into new projects, experimenting with new lib
              </div>
         </form>
    </section>
- <!--services section design-->
-<section class="services" id="services">
-    <h2 class="heading">My <span>Services</span></h2>
-    <div class="services-row">
-        <div class="service-box">
-            <i class='bx bx-code-alt'></i>
-            <h3>Web Development</h3>
-            <p>I build responsive, user-friendly websites and web applications using modern tools and frameworks like React, HTML, CSS, and JavaScript.</p>
-        </div>
-        <div class="service-box">
-            <i class='bx bxs-paint'></i>
-            <h3>UI/UX Design</h3>
-            <p>Creating aesthetically pleasing and intuitive user interfaces to enhance user experience, focusing on simplicity and effectiveness.</p>
-        </div>
-        <div class="service-box">
-            <i class='bx bxl-wordpress'></i>
-            <h3>WordPress Development</h3>
-            <p>Offering custom WordPress development services, from building blogs to e-commerce websites, with fully customizable themes and plugins.</p>
-        </div>
-    </div>
-</section>
 
-<!--projects section design-->
-<section class="projects" id="projects">
-    <h2 class="heading">My <span>Projects</span></h2>
-    <div class="projects-row">
-        <div class="project-box">
-            <img src="./images/project1.jpg" alt="Project Image 1">
-            <h3>Nike Shoe Store</h3>
-            <p>Developed a responsive e-commerce platform for Nike shoes using React, Redux, and Tailwind CSS.</p>
-            <a href="https://nike-store-web.vercel.app/" class="btn">View Project</a>
-        </div>
-        <div class="project-box">
-            <img src="./images/project2.jpg" alt="Project Image 2">
-            <h3>Expense Tracker App</h3>
-            <p>A simple and intuitive web application that helps users track their daily expenses and income, built using React and Context API.</p>
-            <a href="#" class="btn">View Project</a>
-        </div>
-        <div class="project-box">
-            <img src="./images/project3.jpg" alt="Project Image 3">
-            <h3>Personal Portfolio</h3>
-            <p>This personal portfolio website showcases my projects, skills, and contact information, built using HTML, CSS, and JavaScript.</p>
-            <a href="#" class="btn">View Project</a>
-        </div>
-    </div>
-</section>
 
     <!--footer design-->
     <footer class="footer">
